laborations/lab1/testsuite/good/fun_app_two_parameters.cc
int abc(bool b, int d) {
  return 0;
}

int main() {
  return abc(true, 0);
}
