laborations/lab1/testsuite/bad/bad006.cc
using cout::5;

int main () {
	return 0;
}
